# python-python-fastapi

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
tests/: test_app.py
