[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world"
dynamic = ["version"]
description = "A simple hello world FastAPI app"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "httpx>=0.27.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
]
dev = [
    "twine>=5.1.1",
]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.packages.find]
include = ["version*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-rsxX -l --tb=short --junitxml=test-report.xml"

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.pylint.format]
max-line-length = 120
